# sp24-cmpt-722-scene-graphs

./: .gitignore  README.md  pyproject.toml
commonscenes_extract_glb/: README.md  requirements.txt
commonscenes_extract_glb/dataset/: threedfront_dataset.py
commonscenes_extract_glb/helpers/: visualize_scene.py
commonscenes_extract_glb/scripts/: eval_3dfront.py
config/: eval_config.yaml  inference_config.yaml
config/data/: 3dfront.yaml  3dfront_bedroom.yaml  3dfront_diningroom.yaml  3dfront_livingroom.yaml  commonscenes_bedroom.yaml  commonscenes_diningroom.yaml  commonscenes_livingroom.yaml  instructscene_bedroom.yaml  instructscene_diningroom.yaml  instructscene_livingroom.yaml  vg.yaml
config/model/: instructscene_bedroom.yaml  instructscene_diningroom.yaml  instructscene_livingroom.yaml  llm.yaml  vanilla_parser.yaml
text2sg/data/: __init__.py  commonscenes_3dfront.py  instructscene_3dfront.py  threedfront.py  vg.py
text2sg/models/: __init__.py  llm.py
text2sg/models/sg_parser/: __init__.py  base.py  instructscene.py  llm_sg_parser.py  vanilla_parser.py
text2sg/scripts/: evaluate.py  evaluate_sg.py  generate.py
text2sg/utils/: __init__.py  commonscenes.py  scenegraph.py
